--- a/index.html
+++ b/index.html
@@ -517,7 +517,8 @@
 </footer>
     </div>
     
-<script src="http://7.url.cn/edu/jslib/comb/require-2.1.6,jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/require.min.js"></script>
 <script src="/js/main.js" type="text/javascript"></script>
 
     <script>
